testsuite/tests/indexed-types/should_fail/T9160.stderr

T9160.hs:20:8: error:
    • Type indexes must match class instance head
      Expected: F @*
        Actual: F @(* -> *)
    • In the type instance declaration for ‘F’
      In the instance declaration for ‘C (a :: *)’
